--- a/index.html
+++ b/index.html
@@ -2,20 +2,30 @@
 <html>
 
 <head>
-  <title>Text</title>
+  <title>The Analog Specialists</title>
   <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <h1>Heading 1</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
-  <h2>Heading 2</h2>
-  <p>
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
-  <p class="credits">by Joey Carrillo</p>
+  <div id="page">
+    <div id="logo">
+      <img src="img/sample-image.png" alt="Sample Logo" />
+    </div>
+    <ul>
+      <li><a href="#" class="on">Home</a></li>
+      <li><a href="#">For Sale</a></li>
+      <li><a href="#">Repairs</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <p>
+      <img src="img/sample-image.png" alt="Sample Image">
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+      irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+  </div>
 </body>
 
 </html>
